# GPGPU_ISIMA_2020-2021

./: .gitignore  .gitmodules  LICENSE  README.md
Lessons/: 01_lesson.tex
Practicals/Practical_1/: CMakeLists.txt
Practicals/Practical_1/doc/: TP01.tex
Practicals/Practical_1/src/: main.cpp
Practicals/Practical_2/: CMakeLists.txt
Practicals/Practical_2/doc/: TP01.tex  TP02.tex
Practicals/Practical_2/src/: main.cpp
Practicals/Practical_marked/: CMakeLists.txt
Practicals/Practical_marked/doc/: TP_marked.tex
Practicals/Practical_marked/src/: main.cpp
